@@ -1,0 +1,4 @@
+<div data-role="fieldcontain">
+    <label for="upd_[[+name]]">[[+title]]<br /><span class="smallnote">This fields' input type ([[+originaltype]]) is not yet (fully) supported.</span></label>
+    <input type="text" value="[[+value]]" id="upd_[[+name]]" name="[[+name]]" />
+</div>
